; ModuleID = '/home/carl/AnghaBench/freebsd/gnu/usr.bin/gdb/libgdb/extr_fbsd-threads.c_ps_lcontinue.c'
source_filename = "/home/carl/AnghaBench/freebsd/gnu/usr.bin/gdb/libgdb/extr_fbsd-threads.c_ps_lcontinue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ps_prochandle = type { i32 }

@PT_RESUME = common dso_local global i32 0, align 4
@PS_ERR = common dso_local global i32 0, align 4
@PS_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ps_lcontinue(%struct.ps_prochandle* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ps_prochandle*, align 8
  %5 = alloca i32, align 4
  store %struct.ps_prochandle* %0, %struct.ps_prochandle** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* @PT_RESUME, align 4
  %7 = load i32, i32* %5, align 4
  %8 = call i32 @ptrace(i32 %6, i32 %7, i32 0, i32 0)
  %9 = icmp eq i32 %8, -1
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32, i32* @PS_ERR, align 4
  store i32 %11, i32* %3, align 4
  br label %14

12:                                               ; preds = %2
  %13 = load i32, i32* @PS_OK, align 4
  store i32 %13, i32* %3, align 4
  br label %14

14:                                               ; preds = %12, %10
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @ptrace(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
